enhance custom styles and update introduction section with implementation link

--- a/Report/sections/1_introduction.tex
+++ b/Report/sections/1_introduction.tex
@@ -3,7 +3,9 @@
 
 The \textbf{Canny edge detector} is an \href{https://en.wikipedia.org/wiki/Edge_detection}{edge detection} operator that uses a multi-stage algorithm to detect a wide range of edges in images. It was developed by \href{https://en.wikipedia.org/wiki/John_F._Canny}{John F. Canny} in 1986. He also produced a computational theory of edge detection explaining why the technique works \cite{wikipedia_canny}.
 
-In this report, the Canny edge detection algorithm has been implemented using the resources and explanations provided in \cite{gonzalez2008, medium_canny, sriram_canny, wikipedia_canny}.
+In this report, the Canny edge detection algorithm has been implemented using the resources and explanations provided in \cite{gonzalez2008, medium_canny, sriram_canny, wikipedia_canny}. 
+
+My implementation is available at: \url{https://github.com/abeshahsan/Assignment---Canny-Edge-Detector}
 
 \subsection{Why Canny?}
 \label{sec:why-canny}
